z-index of detail fixed

--- a/becks/projects/user-app/src/theme/slider.scss
+++ b/becks/projects/user-app/src/theme/slider.scss
@@ -80,7 +80,7 @@
   .btn-exp {
     position: absolute;
     bottom: 45px;
-    z-index: 2;
+    z-index: 3;
     text-transform: uppercase;
     @media (min-width: 1024px) {
       position: relative;
@@ -178,10 +178,10 @@
       -webkit-backdrop-filter: blur(10px);
       padding: 30px;
       background-color: rgba(0, 0, 0, 0.6);
-      z-index: 2;
+      z-index: 3;
       &.add-exp {
         height: 85%;
-        z-index: 2;
+        z-index: 3;
       }
       .detail-close {
         text-align: right;
